# net_port

./: .dockerignore  .env.example  .env_db  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  INSTALLATION_GUIDE.md  README.md  SSL_SETUP_GUIDE.md  docker-compose.yml  generate_jwt.js  init_db.sql  init_device_db.sql  install.sh  nginx.conf  start.sh
.cross-build/armhf/server/: VersionInfo.h
artifacts/clients/: README.md
client/: CMakeLists.txt  changelog.txt  main.c
client/cmake/: toolchain-aarch64.cmake  toolchain-armhf.cmake
client/common/: CMakeLists.txt
client/common/inc/: logMsg.h  settings.h
client/common/log/: logMsg.c
client/proxy/client/: device_heartbeat.c  proxy_client.c  proxy_client_device_integration.c
client/proxy/inc/: device_heartbeat.h  proxy_client.h  proxy_client_device_integration.h  proxy_server.h
client/proxy/server/: proxy_server.c
client/resources/: client_update.c  client_update.h  signal_handler.c
client/resources/inc/: signal_handler.h
client_win/: CMakeLists.txt  CMakeSettings.json  README.md  main.c
client_win/common/: CMakeLists.txt
client_win/common/hal/time/win32/: get_time.c
client_win/common/inc/: get_time.h  time_utils.h
client_win/common/log/: logMsg.c
client_win/proxy/client/: proxy_client.c
client_win/proxy/inc/: proxy_client.h  unistd.h
client_win/resources/: signal_handler.c  time_counter.c
client_win/resources/inc/: time_counter.h
common/: CMakeLists.txt
common/db/: db.c
common/event/: db_ref_tables.c  make_event.c
common/hal/time/unix/: time.c
common/inc/: db.h  db_proc.h  db_ref_tables.h  make_event.h  settings.h  time_utils.h
deploy/: README.md
deploy/grafana/dashboards/: net_port_overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
deploy/prometheus/alerts/: net_port.yml
docs/: admin-guide.md  openapi.yaml  production-upgrade.md
plans/: IMPLEMENTATION_SUMMARY.md  api_endpoints_specification.md  architecture_diagram.md  dynamic_port_forwarding_specification.md  final_technical_specification.md  implementation_plan.md  test_plan_and_integration.md
rust-client/: Cargo.toml  README.md
rust-client/src/: config.rs  connection.rs  error.rs  input_thread.rs  logger.rs  main.rs  output_thread.rs  shutdown.rs
scripts/: build-client-cross.sh  build-client-windows.sh  build-docker.sh  bump-version.sh  cross-build-client-windows.Dockerfile  cross-build-client.Dockerfile  ensure-server-ssl.sh  remote-upgrade.sh  run-migrations.sh  upgrade-server.sh
scripts/integration/: README.md  device_tunnel_test.sh  fixed_port_test.sh  load_test_devices.py  run_all_integration_tests.sh  run_in_container.sh  security_control_test.sh  tunnel_tls_ssh_e2e_test.sh
scripts/integration/lib/: common.sh  mock_ssh_server.py
server/: CMakeLists.txt  VersionInfo.h  changelog.txt  install_service.sh  main.c  net_port_init.sh  start_server.sh
server/common/: CMakeLists.txt
server/common/db/: db.c
server/common/hal/thread/linux/: thread_linux.c
server/common/hal/thread/win32/: thread_win32.c
server/common/inc/: db.h  db_proc.h  hal_time.h  settings.h
server/common/log/: logMsg.c
server/db/: db_func.c
server/db/inc/: db_func.h
server/proxy/inc/: device_manager.h  proxy_server.h  security_features.h
server/proxy/server/: device_manager.c  monitoring_statistics.c  proxy_server.c  proxy_server_device_integration.c  security_features.c
server/resources/: signal_handler.c
server/resources/inc/: signal_handler.h
sql/: cumulative_statistics_totals.sql  device_connecting_status_fix.sql  device_delete_notify.sql  device_traffic_samples.sql  grant_app_privileges.sql  port_release_fix.sql  server_port_separation.sql  user_auto_connect.sql
sql/migrations/: 000_schema_migrations.sql  003_internal_port_range_fix.sql  005_device_preferred_port.sql  009_statistic_empty_snapshot_cleanup.sql  011_users_login_unique.sql  012_device_ssl_settings.sql  README.md
web/backend_net_port/: .eslintrc.json  jest.config.js  package-lock.json  package.json
web/backend_net_port/config/: default.json
web/backend_net_port/src/: add-test-user.js  app.js  authentication.js  channels.js  client-downloads.js  client-releases.js  client-runtime-config.js  device-auto-connect.js  device-status-watcher.js  index.js  jwt-config.js  knex.js  logger.js  observability.js  registration-log-metrics.js
web/backend_net_port/src/config/: ports.js
web/backend_net_port/src/lib/: authenticateRequest.js  authentication-rate-limit.js  userRoles.js
web/backend_net_port/src/models/: users.model.js
web/backend_net_port/src/services/: index.js
web/backend_net_port/test/: authentication-rate-limit.test.js  deviceValidation.test.js  jwt-config.test.js  userRoles.test.js  userValidation.test.js
web/deploy/: build.py  check_db.py  deploy_db.py  main.py  uspd_web_update.py
web/deploy/Common/: web_files.py
web/frontend_net_port/: package-lock.json  package.json  webpack.config.js
web/frontend_net_port/public/: index.html  manifest.json
web/frontend_net_port/src/: App.js  consts.js  index.js
web/frontend_net_port/src/components/: Abilities.js  ClientDownload.js  CommonDialog.js  DevicePortBadges.js  DeviceStatsModal.js  FilterSelect.js  Loader.js  MainLayout.js  MainLayout.styles.js  NavBlock.js  NavItem.js  OverviewStatsModal.js  ServerStatsModal.js
web/frontend_net_port/src/config/: permission.js  ports.js
web/frontend_net_port/src/consts/: client.js  deviceTypes.js
web/frontend_net_port/src/context/: ApiContext.js  AuthContext.js
web/frontend_net_port/src/errors/: ErrorsPage.js
web/frontend_net_port/src/files/: module_net_port_client-0.0.1_arm-linux-gnueabihf  module_net_port_client-0.0.1_x64-linux  module_net_port_client-0.0.1_x86-linux  net_port.service
web/frontend_net_port/src/hooks/: useDeviceStatusSocket.js  useRealtimeSocket.js
web/frontend_net_port/src/notifications/: Notifications.js
web/frontend_net_port/src/pages/: Devices.js  Login.js  Main.js  NotFound.js  Servers.js  Settings.js  Statistics.js  (+1 more)
web/utils/: add_test_user.js
(+39 files in other folders)
